[gd_scene load_steps=3 format=3 uid="uid://c3tch322g3hhb"]

[ext_resource type="Theme" uid="uid://58654jslq711" path="res://resources/themes/start_menu_theme.tres" id="1_12hgg"]
[ext_resource type="Script" path="res://scripts/menus/start_menu.gd" id="1_uv3it"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_12hgg")
script = ExtResource("1_uv3it")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_12hgg")
color = Color(0.192157, 0.192157, 0.192157, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(50, 5)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_12hgg")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="CenterContainer"]
layout_mode = 2
theme = ExtResource("1_12hgg")
ratio = 1.7778

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/AspectRatioContainer"]
layout_mode = 2
theme = ExtResource("1_12hgg")

[node name="Title" type="Label" parent="CenterContainer/AspectRatioContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("1_12hgg")
text = "Game Title
"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/AspectRatioContainer/VBoxContainer"]
custom_minimum_size = Vector2(225, 5)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme = ExtResource("1_12hgg")

[node name="StartButton" type="Button" parent="CenterContainer/AspectRatioContainer/VBoxContainer" groups=["Buttons"]]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_12hgg")
text = "Start"

[node name="CreditsButton" type="Button" parent="CenterContainer/AspectRatioContainer/VBoxContainer" groups=["Buttons"]]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_12hgg")
text = "Credits
"

[node name="OptionsButton" type="Button" parent="CenterContainer/AspectRatioContainer/VBoxContainer" groups=["Buttons"]]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_12hgg")
text = "Options
"

[node name="QuitButton" type="Button" parent="CenterContainer/AspectRatioContainer/VBoxContainer" groups=["Buttons"]]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_12hgg")
text = "Exit
"

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/AspectRatioContainer/VBoxContainer"]
custom_minimum_size = Vector2(225, 5)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme = ExtResource("1_12hgg")

[node name="Controls" type="Label" parent="CenterContainer/AspectRatioContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_12hgg")
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 12
text = "Controls:  ESC Pause/Unpause
WASD Move, E Action"
horizontal_alignment = 1

[connection signal="mouse_entered" from="CenterContainer/AspectRatioContainer/VBoxContainer/StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/AspectRatioContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="CenterContainer/AspectRatioContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/AspectRatioContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="mouse_entered" from="CenterContainer/AspectRatioContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/AspectRatioContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="mouse_entered" from="CenterContainer/AspectRatioContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/AspectRatioContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
